Table Location {
  ID          int [pk, increment]
  City        varchar(255)
  Department  varchar(255)
  Latitude    float
  Longitude   float
}

Table Time {
  ID        int [pk, increment]
  HourTime  time
  DateTime  date
}

Table Climate {
  ID               int [pk, increment]
  LocationID       int [ref: > Location.ID]
  TimeID           int [ref: > Time.ID]
  Temperature      float
  Sunshine         float
  Humidity         float
  WindSpeed        float
  WeatherCondition varchar(255)
}